--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 <html>
   <head>
+    <title> Mebe Index</title>
+    <style>
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: blue;
+    }
+    li {
+      float: left;
+    }
 
+    li a {
+      display: block;
+      color: green;
+      text-align: center;
+      padding: 16;
+      text-decoration: none;
+    }
+    li a:hover {
+      background-color: purple;
+    }
+    </style>
   </head>
   <body>
-
+    <h1>New Page maybe</h1>
+    <ul>
+      <li><a href="#citizenship">Citizenship</a></li>
+      <li><a href="#contract">Contract</a></li>
+    </ul>
   </body>
 </html>
