--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Mebe Index</title>
+    <title> Yay Home Page</title>
     <style>
     ul {
       list-style-type: none;
@@ -28,8 +28,8 @@
   <body>
     <h1>New Page maybe</h1>
     <ul>
-      <li><a href="#citizenship">Citizenship</a></li>
-      <li><a href="#contract">Contract</a></li>
+      <li><a href="citizenship.html">Citizenship</a></li>
+      <li><a href="contract.html">Contract</a></li>
     </ul>
   </body>
 </html>
