--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       background-color: blue;
     }
     li {
-      float: left;
+      float: center;
     }
 
     li a {
       display: block;
-      color: green;
+      color: red;
       text-align: center;
-      padding: 16;
+      padding: 32;
       text-decoration: none;
     }
     li a:hover {
-      background-color: purple;
+      background-color: green;
     }
     </style>
   </head>
   <body>
-    <h1>New Page maybe</h1>
+    <style= "background-color:gold">
+    <h1>Yay Home Page</h1>
     <ul>
       <li><a href="citizenship.html">Citizenship</a></li>
       <li><a href="contract.html">Contract</a></li>
