--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <style= "background-color:gold">
+    <background-color style= "color:gold">
     <h1>Yay Home Page</h1>
     <ul>
       <li><a href="citizenship.html">Citizenship</a></li>
