--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     li a:hover {
       background-color: green;
     }
+    body {background-color: indigo}
     </style>
   </head>
   <body>
-    <background-color style= "color:gold">
     <h1>Yay Home Page</h1>
     <ul>
       <li><a href="citizenship.html">Citizenship</a></li>
