--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 
     li a {
       display: block;
-      color: red;
+      color: magenta;
       text-align: center;
       padding: 32;
       text-decoration: none;
     }
     li a:hover {
-      background-color: green;
+      background-color: seagreen;
     }
-    body {background-color: indigo}
+    body {background-color: black}
+    h1 {color: cyan}
     </style>
   </head>
   <body>
