--- a/Images/images-format.html
+++ b/Images/images-format.html
@@ -9,7 +9,7 @@
     <p> JPG's have the best quality and are the best for gradients and shadows, but lower quality can severly impact the picture.</p>
     <p> PNG's again have a very limited number of colors to use, as well as having very large file sizes and not being supported by some major web browsers.</p>
     <h3> <a href='index.html'>If You Would Like To Return To Le Best Pictures Ever Please Click On Me</a></h3>
-    <p> Oh and by the way, here's an animated tree:</p>
+    <p> Oh and by the way, here's my animated tree:</p>
     <img src='treeanimation.gif'>
   </body>
 </html>
