--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <ul>
       <li><a href="citizenship.html">Citizenship</a></li>
       <li><a href="contract.html">Contract</a></li>
-      <li><a href="file:///Users/block1/Desktop/Site/Images/index.html"> Le Most Amazing Images Eva</a></li>
+      <li><a href="index.html"> Le Most Amazing Images Eva</a></li>
     </ul>
   </body>
 </html>
