--- a/Images/images-format.html
+++ b/Images/images-format.html
@@ -2,9 +2,32 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style copy.css">
     <title>Image Formats</title>
+    <style>
+    #button {
+      width: 6em;
+      border: 100 solid green;
+      background: aqua;
+      border-radius: 100;
+      color: blue;
+      align-content: center;
+    }
+    a {
+      display: block;
+      width: 100%;
+      line-height: 2em;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 5;
+    }
+    #button:hover {
+      color: DodgerBlue;
+      background: Aquamarine;
+    }
+    </style>
   </head>
   <body>
     <h1> Image Formats</h1>
+    <div id="button"><a href="../index.html">Home Page</a></div>
     <p> GIF's are useful as a result of their low file size, but have multiple downsides including a limitation to the amount of colors that can be used as well as not being able to show gradients well.</p>
     <p> JPG's have the best quality and are the best for gradients and shadows, but lower quality can severly impact the picture.</p>
     <p> PNG's again have a very limited number of colors to use, as well as having very large file sizes and not being supported by some major web browsers.</p>
