--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li><a href="citizenship.html">Citizenship</a></li>
       <li><a href="contract.html">Contract</a></li>
       <li><a href="Images/index.html">Le Most Amazing Images Eva</a></li>
+      <li><a href="Story/index.html">Pretty Chill Story</a></li>
     </ul>
   </body>
 </html>
