--- a/Story/story_3.html
+++ b/Story/story_3.html
@@ -8,7 +8,7 @@
     <div id="button"><a href="../index.html">Home Page</a></div>
       <table style="width:100%">
         <tr>
-          <th colspan="2"><h1>Choose Your Own Destiny!<h1></th>
+          <th colspan="2"><h1>Choose Your Own Destiny!</h1></th>
         </tr>
         <tr>
           <th colspan="2" style="font-size: 20">You’re glad the wait is over and you can finally leave the Earth, but little do you know you were just unconscious to your great disappointment, and you are now slowly suffocating to death as a result of being under the surface. You proceed to:</th>
@@ -21,7 +21,8 @@
           <td><a href="story_3_2.html">Attempt to rescue yourself in a futile effort at survival, but in reality you only dig yourself further into the ground</a></td>
         </tr>
         <tr>
-          <td><p>https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAIlAAAAJDQ4OGU1YTdkLWI2MjktNGFmNy1iODE3LTEyODJhYWQyOTc1Nw.jpg</p></td>
+          <td></td>
+          <td colspan="2"><p>https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAIlAAAAJDQ4-OGU1YTdkLWI2MjktNGFmNy1iODE3LTEyODJhYWQyOTc1Nw.jpg</p></td>
         </tr>
       </table>
   </body>
