--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <li><a href="contract.html">Contract</a></li>
       <li><a href="Images/index.html">Le Most Amazing Images Eva</a></li>
       <li><a href="Story/index.html">Pretty Chill Story</a></li>
+      <li><a href="Travel/index.html">My Awesome Travel Site</a></li>
     </ul>
   </body>
 </html>
