--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li><a href="Images/index.html">Le Most Amazing Images Eva</a></li>
       <li><a href="Story/index.html">Pretty Chill Story</a></li>
       <li><a href="Travel/index.html">My Awesome Travel Site</a></li>
+      <li><a href="Store Website/index.html">Highest Of Quality Products At My Completely Legit Store</a>
     </ul>
   </body>
 </html>
