--- a/Store Website/index.html
+++ b/Store Website/index.html
@@ -1,16 +1,137 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Hello, world!</title>
+    <title>Crazy Computers!</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+            <div id="button"><a href="../index.html">Home Page</a></div>
+          </div>
+        </div>
+      <div class="row">
+        <div class="col">
+          <a href="index.html"><h1> <span style="color:red">Cra</span><span style="color:blue">zy</span> <span style="color:green">Comp</span><span style="color:purple">ut</span><span style="color:orange">ers!</span></h1></a>
+        </div>
+      </div>
+    <div class="row">
+      <div class="col">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Crazy Computers!</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div style="background-color: white"  class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="product.html">Products</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#"></a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <img src="...">
+    </div>
+    <div class="col">
+      <img src="...">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100 img-fluid width:100%; height: auto;" src="stones.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Amazing Picture Quality</h3>
+        <p style="color:white">Our Monitors Come With 8k Reslution, Allowing For The Most Beautiful Picture Quality</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 img-fluid width:100%; height: auto;" src="flash.png" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>The Fastest Computers Anywhere</h3>
+        <p style="color:white;">With The Fastest Processing Speeds You'll Be Able To Find Anywhere</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100 img-fluid width:100%; height: auto;" src="beats.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Best Sound Quality Ever</h3>
+        <p style="color:white">With Headphones That Feel Clouds And Sound Quality That Makes You Feel Like Your Not Just Watching</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+</div>
+<div class="row">
+  <div class="col">
+    <div class="card" style="width: 20rem;">
+  <img class="card-img-top" src="lenovo.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h4 style="color: white;" class="card-title">High-Speed Desktops</h4>
+    <p class="card-text"></p>
+    <a href="product.html" class="btn btn-primary">Products</a>
+  </div>
+</div>
+</div>
+<div class="col">
+  <div class="card" style="width: 20rem;">
+  <img class="card-img-top" src="razer.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h4 style="color: white;" class="card-title">The Best Laptops</h4>
+    <p class="card-text"></p>
+    <a href="product.html" class="btn btn-primary">Products</a>
+  </div>
+</div>
+</div>
+<div class="col">
+  <div class="card" style="width: 20rem;">
+  <img class="card-img-top" src="razer-phone.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h4 style="color: white;" class="card-title">Quality Phones</h4>
+    <p class="card-text"></p>
+    <a href="product.html" class="btn btn-primary">Products</a>
+  </div>
+</div>
+</div>
+</div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
